change base html, added like object

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,7 +14,11 @@
                 <div class="panel-body">
                     <p>{{ post.description }}</p>
                 </div>
-                <div class="panel-footer"></div>
+                <div class="panel-footer">
+                    <a class="" href="#">
+                        <i class="fa fa-thumbs-o-up"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
