--- a/templates/base.html
+++ b/templates/base.html
@@ -79,13 +79,15 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="{% static 'metisMenu/metisMenu.min.js' %}"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="{% static 'raphael/raphael.min.js' %}"></script>
-    <script src="{% static 'morrisjs/morris.min.js' %}"></script>
-    <script src="{% static 'morris-data.js' %}"></script>
+{#    <!-- Morris Charts JavaScript #}
+{#    <script src="{% static 'raphael/raphael.min.js' %}"></script>#}
+{#    <script src="{% static 'morrisjs/morris.min.js' %}"></script>#}
+{#    <script src="{% static 'morris-data.js' %}"></script>-->#}
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'js/sb-admin-2.js' %}"></script>
+    {% block extrajs %}
+    {% endblock %}
 
 </body>
 
